src/styles.css
:root {
   --theme-header: lightgray;
   --theme-sidebar: rgb(235, 235, 235);
   --theme-border: black;
   --theme-text: black;
   --theme-selected-project-text: white;
   --theme-selected-project-background: rgb(50, 50, 200);
   --theme-selected-project-selection-text: black;
   --theme-selected-project-selection-background: yellow;
   --theme-delete: red;
   --theme-delete-text: white;
}

* {
   padding: 0;
   margin: 0;
   color: var(--theme-text);
   box-sizing: border-box;
}

body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: flex;
   flex-flow: column;
   min-height: 100vh;
}

body > header {
   padding: 24px;
   background: var(--theme-header);
   white-space: nowrap;
}

body > main {
   display: flex;
   flex: 1;
   border-top: solid var(--theme-border) 1px;
}

body > main > nav {
   display: flex;
   flex-flow: column;
   border-right: solid var(--theme-border) 1px;
   gap: 16px;
   min-width: 400px;
   max-width: 400px;
   padding: 24px;
   background: var(--theme-sidebar);
}

body > main > nav > header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 12px;
   width: 100%;
}

body > main > nav > header > button {
   border: solid var(--theme-border) 1px;
   background: none;
   border-radius: 100%;
   font-size: 120%;
   width: 36px;
   aspect-ratio: 1;
   padding: 6px;
   cursor: pointer;
   transition: border-color 150ms, background-color 150ms, color 150ms, opacity 150ms;
}

body > main > nav > header > button:hover {
   color: var(--theme-selected-project-text);
   background: var(--theme-selected-project-background);
   border: none;
}

body > main > nav > header > button:active {
   transition: opacity 50ms;
   opacity: 50%;
}

body > main > nav > ul {
   display: flex;
   flex-flow: column;
   gap: 12px;
}

body > main > nav > ul > li {
   display: flex;
   justify-content: space-between;
   gap: 12px;
}

body > main > nav > ul > li > button.delete {
   color: var(--theme-delete);
   font-weight: bold;
   font-size: 120%;
   border: none;
   background: none;
   border-radius: 100%;
   flex-basis: 37px;
   aspect-ratio: 1;
   cursor: pointer;
   opacity: 0;
   transition: opacity 150ms, background-color 150ms, color 150ms;
   padding-bottom: 2px;
}

body > main > nav > ul > li:hover > button.delete,
body > main > nav > ul > li:focus-within > button.delete,
body > main > nav > ul > li > .project.selected + button.delete {
   opacity: 80%;
}

body > main > nav > ul > li > button.delete:hover,
body > main > nav > ul > li > button.delete:focus-visible {
   color: var(--theme-delete-text);
   background: var(--theme-delete);
}

body > main > nav > ul > li > .project + button.delete:active {
   transition: opacity 50ms;
   opacity: 50%;
}

body > main > nav > ul > li > form {
   display: flex;
   flex-flow: column;
   width: 100%;
}

body > main > nav > ul > li > form > input {
   width: 100%;
}

body > main > nav > ul .project {
   flex: 1;
   text-align: start;
   border: none;
   background: none;
   cursor: pointer;
   color: rgb(120, 120, 120);
   padding: 8px 16px;
   border-radius: 16px;
   font-size: 110%;
   transition: color 150ms, background-color 150ms, box-shadow 150ms;
}

body > main > nav > ul button.project {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 16px;
}

body > main > nav > ul button.project > div {
   color: inherit;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
}

body > main > nav > ul .project:hover,
body > main > nav > ul .project:focus-visible {
   color: var(--theme-text);
}

body > main > nav > ul .project.selected {
   color: var(--theme-selected-project-text);
   background: var(--theme-selected-project-background);
}

body > main > nav > ul .project.selected:hover,
body > main > nav > ul .project.selected:focus-visible {
   outline: none;
   box-shadow: 0 0 6px var(--theme-selected-project-background);
}

body > main > nav > ul input.project.selected {
   cursor: text;
   transition: box-shadow 0ms;
}

body > main > nav > ul button.project::after {
   opacity: 0%;
   content: "Edit title";
   white-space: nowrap;
   font-size: 60%;
   transition: opacity 150ms;
}

body > main > nav > ul button.project.selected:hover::after,
body > main > nav > ul button.project.selected:focus-visible::after {
   opacity: 80%;
}

body > main > nav > ul .project.selected::selection {
   color: var(--theme-selected-project-selection-text);
   background: var(--theme-selected-project-selection-background);
}

body > main > ul.tasks {
   --task-size: 200px;
   --task-layout: repeat(auto-fill, var(--task-size));
   padding: 24px;
   gap: 24px;
   display: grid;
   grid-template: var(--task-layout) / var(--task-layout);
   justify-content: space-evenly;
   flex: 1;
   transition: opacity 200ms;
}

body > main > ul.tasks.hidden {
   transition: opacity 10ms;
   opacity: 0%;
}

body > main > ul.tasks > li {
   border: solid var(--theme-border) 1px;
   height: var(--task-size);
   padding: 24px;
   border-radius: 24px;
   overflow: auto;
   white-space: nowrap;
}

